--- a/.github/workflows/release-to-main.yml
+++ b/.github/workflows/release-to-main.yml
@@ -14,10 +14,11 @@ jobs:
         fetch-depth: 0
     - name: Commit files
       run: |
-        echo "a" >> README.md
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git commit -a -m "Add changes"
+
+        git switch main
+        git merge release
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
