--- a/.github/workflows/release-to-main.yml
+++ b/.github/workflows/release-to-main.yml
@@ -23,4 +23,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         branch: ${{ github.head_ref }}
-        github_token: ${{ secrets.PAT_TOKEN }}
+        github_token: ${{ secrets.PAT_TOKEN2 }}
